# DistFieldHexMesh

./: .gitignore  .project  CMakeLists.txt  CMakePresets.json  Splitting sequence.odt  mtc.natvis
DistFieldHexMesh/: CMakeLists.txt  app.cpp  app.h  gradient2D.wxmx  gradient3D.wxmx  indices.h  main.cpp  mainFrame.cpp  mainFrame.h  parabolic_shooting.wxmx  volume.cpp  volume.h
DistFieldHexMesh/UI/include/: analyzeGapsDlg.h  createBaseMeshDlg.h  divideHexMeshDlg.h  editPrefsDlg.h  graphicsCanvas.h  graphicsDebugCanvas.h  graphicsVBORec.h  mainFrame.h  makeBlockDlg.h  objectTreeCtrl.h  progressReporter.h  selectBlocksDlg.h  splitLongTrisDlg.h
DistFieldHexMesh/UI/src/: analyzeGapsDlg.cpp  createBaseMeshDlg.cpp  divideHexMeshDlg.cpp  editPrefsDlg.cpp  graphicsCanvas.cpp  graphicsDebugCanvas.cpp  graphicsVBORec.cpp  mainFrame.cpp  makeBlockDlg.cpp  objectTreeCtrl.cpp  selectBlocksDlg.cpp  splitLongTrisDlg.cpp
DistFieldHexMesh/assets/: prefs.txt
DistFieldHexMesh/geometry/include/: Vector2d.h  block.h  debugMeshData.h  edge.h  edgeKey.h  fixedPoint.h  glMeshData.h  glMultiKeyMeshData.h  gradingOp.h  lineSegment2D.h  meshData.h  model.h  objectPool.h  objectPool.hpp  polyMesh.h  polyMeshIndex.h  polygon.h  polygonSampling.hpp  polygonSearchKey.h  polyhedron.h  rayModelIntersector.h  splitter2D.h  splitter3D.h  tolerances.h  triMeshIndex.h  triMeshTypeDefs.h  unalignedBBox.h  vertex.h  vertexSpatialTree.h  volume.h
DistFieldHexMesh/geometry/src/: block.cpp  debugMeshData.cpp  edge.cpp  edgeKey.cpp  fixedPoint.cpp  glMeshData.cpp  gradingOp.cpp  lineSegment2D.cpp  meshData.cpp  model.cpp  objectPool.cpp  polyHedron.cpp  polyMesh.cpp  polygon.cpp  polygonSearchKey.cpp  rayModelIntersector.cpp  splitter2D.cpp  splitter3D.cpp  unalignedBBox.cpp  vector2d.cpp  vertex.cpp  vertexSpatialTree.cpp  volume.cpp
DistFieldHexMesh/graphics/include/: drawCrossSectionEdges.h  drawDebugMesh.h  drawHexMesh.h  drawMesh.h  drawModelMesh.h  graphicsVBORec.h
DistFieldHexMesh/graphics/src/: drawCrossSectionEdges.cpp  drawDebugMesh.cpp  drawHexMesh.cpp  drawMesh.cpp  drawModelMesh.cpp  graphicsVBORec.cpp
DistFieldHexMesh/include/: Index3D.h  UniversalIndex3D.h  app.h  appData.h  appDataIntf.h  block.h  blockData.h  blockTest.h  buildCFDHexesDlg.h  cell.h  createBaseMeshDlg.h  dataPool.h  defines.h  divideHexMeshDlg.h  drawHexMesh.h  drawMesh.h  drawModelMesh.h  edge.h  edgeKey.h  enums.h  fastBisectionMap.h  fastBisectionSet.h  fixedArray.h  fixedPoint.h  gradingOp.h  gradingRec.h  graphicsCanvas.h  graphicsDebugCanvas.h  graphicsVBORec.h  hashBTreeMap.h  index3DFull.h  indices.h  intersectEdge.h  io_utils.h  lambdaMacros.h  logger.h  mainFrame.h  makeBlockDlg.h  meshData.h  multiLockGuard.h  (+38 more)
DistFieldHexMesh/shaders/: common_ubos.inc  debug.frag  debug.vert  dual_peeling_blend.frag  dual_peeling_blend.vert  dual_peeling_final.frag  dual_peeling_init.frag  dual_peeling_init.vert  dual_peeling_peel.frag  dual_peeling_peel.vert  dual_peeling_screenRect.vert  phong_depth.frag  phong_depth_blendBack.frag  phong_depth_final.frag  phong_depth_quad.vert
DistFieldHexMesh/src/: app.cpp  appData.cpp  block.cpp  blockData.cpp  blockTest.cpp  buildCFDHexesDlg.cpp  cell.cpp  createBaseMeshDlg.cpp  dataPool.cpp  divideHexMeshDlg.cpp  drawHexMesh.cpp  drawMesh.cpp  drawModelMesh.cpp  edge.cpp  gradingOp.cpp  graphicsCanvas.cpp  graphicsDebugCanvas.cpp  graphicsVBORec.cpp  index3D.cpp  logger.cpp  main.cpp  mainFrame.cpp  mainTest.cpp  makeBlockDlg.cpp  meshData.cpp  multiLockGuard.cpp  objectPool.cpp  objectTreeCtrl.cpp  polyHedron.cpp  polygon.cpp  polygonSearchKey.cpp  polygonSplitter.cpp  polyhedronSplitter.cpp  polymeshTables.cpp  pool_allocator.cpp  selectBlocksDlg.cpp  splitLongTrisDlg.cpp  splitParams.cpp  splitter.cpp  splitter2D.cpp  (+13 more)
DistFieldHexMesh/test/include/: testBlock.h  testMultiCore.h  testPoolMemory.h
DistFieldHexMesh/test/src/: testBlock.cpp  testMain.cpp  testMultiCore.cpp  testPoolMemory.cpp
